[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sounds/ui_select.wav" type="AudioStream" id=1]
[ext_resource path="res://src/ui/controlswithsound/SoundButton.gd" type="Script" id=2]
[ext_resource path="res://src/ui/ConfigPanel.gd" type="Script" id=3]
[ext_resource path="res://src/ui/controlswithsound/SoundCheckButton.gd" type="Script" id=4]

[node name="ConfigPanel" type="PopupPanel"]
visible = true
margin_right = 78.0
margin_bottom = 130.0
popup_exclusive = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 75.0
margin_bottom = 127.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoOptions" type="PanelContainer" parent="VBoxContainer"]
margin_right = 72.0
margin_bottom = 30.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VideoOptions"]
margin_left = 3.0
margin_top = 3.0
margin_right = 69.0
margin_bottom = 27.0
custom_constants/margin_left = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VideoOptions/MarginContainer"]
margin_left = 1.0
margin_right = 66.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/VideoOptions/MarginContainer/HBoxContainer"]
margin_top = 8.0
margin_right = 39.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Fullscreen"

[node name="FullscreenToggle" type="CheckButton" parent="VBoxContainer/VideoOptions/MarginContainer/HBoxContainer"]
margin_left = 41.0
margin_right = 65.0
margin_bottom = 24.0
script = ExtResource( 4 )

[node name="SouindOptions" type="PanelContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 72.0
margin_bottom = 98.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/SouindOptions"]
margin_left = 3.0
margin_top = 3.0
margin_right = 69.0
margin_bottom = 63.0
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SouindOptions/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 66.0
margin_bottom = 59.0

[node name="VolumeLabel" type="Label" parent="VBoxContainer/SouindOptions/MarginContainer/VBoxContainer"]
margin_right = 65.0
margin_bottom = 7.0
text = "Volume"
align = 1

[node name="SoundLabel2" type="Label" parent="VBoxContainer/SouindOptions/MarginContainer/VBoxContainer"]
margin_top = 9.0
margin_right = 65.0
margin_bottom = 16.0
text = "Sound"

[node name="SoundVolume" type="HSlider" parent="VBoxContainer/SouindOptions/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 65.0
margin_bottom = 24.0
max_value = 1.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="VBoxContainer/SouindOptions/MarginContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 65.0
margin_bottom = 33.0
text = "Music"

[node name="MusicVolume" type="HSlider" parent="VBoxContainer/SouindOptions/MarginContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 65.0
margin_bottom = 41.0
max_value = 1.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UILabel" type="Label" parent="VBoxContainer/SouindOptions/MarginContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 65.0
margin_bottom = 50.0
text = "UI"

[node name="UIVolume" type="HSlider" parent="VBoxContainer/SouindOptions/MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 65.0
margin_bottom = 58.0
max_value = 1.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OK" type="Button" parent="VBoxContainer"]
margin_left = 24.0
margin_top = 100.0
margin_right = 72.0
margin_bottom = 124.0
rect_min_size = Vector2( 48, 24 )
size_flags_horizontal = 8
text = "OK"
script = ExtResource( 2 )
sound_type = 1

[node name="SoundTest" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
bus = "Sounds"

[connection signal="toggled" from="VBoxContainer/VideoOptions/MarginContainer/HBoxContainer/FullscreenToggle" to="." method="_on_FullscreenToggle_toggled"]
[connection signal="value_changed" from="VBoxContainer/SouindOptions/MarginContainer/VBoxContainer/SoundVolume" to="." method="_on_SoundVolume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SouindOptions/MarginContainer/VBoxContainer/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SouindOptions/MarginContainer/VBoxContainer/UIVolume" to="." method="_on_UIVolume_value_changed"]
[connection signal="pressed" from="VBoxContainer/OK" to="." method="_on_OK_pressed"]
